--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^3.2.1",
     "apollo-server-micro": "^3.4.0",
     "axios": "^0.23.0",
+    "fa-icons": "^0.2.0",
     "firebase": "^9.1.3",
     "graphql": "^15.6.1",
     "micro": "^9.3.4",
